@@ -364,6 +364,7 @@ Special Pages:
   list pages with less than this number of links. Defaults to 1.
 * (bug 4319) Don't show a "create account" link on the login form when
   account creation is disabled.
+* Javascript filter for Special:Allmessages
 
 Misc.:
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
